# genai-test

./: .gitignore  README.html  README.md  pyproject.toml
src/learning/: gemini.py
src/learning/DSpy/: dspy_tutorial.py  start.py
src/learning/crewai_test/: tool_use.py
src/learning/evals/: honeycomb.ipynb
src/learning/lancedb/: lancedb_docs.py  min_rag.py
src/learning/rag_dataset/: generate.py
src/learning/ragas_fw/: start.py
src/spikes/social_media/: agents.py  chat_utils.py  constants.py  crews.py  main.py  participant.py  talkers.py  tasks.py
src/spikes/social_media/outputs/: context.txt
